Updated README.md and README.txt. Fixed a problem with part2 Makefile

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,4 +1,4 @@
-ifneq ($(KERNELRELEASE),) 
+ifneq ($(KERNELRELEASE),)
   obj-m := my_xtime.o
 else
   KERNELDIR ?= /lib/modules/`uname -r`/build/
@@ -9,5 +9,4 @@ default:
 endif
 
 clean:
-	 rm -f *.ko *.o Module* *mod*
-
+	 rm -f -r *.ko* .*.cmd *.o* Module* *mod* .tmp_versions
